assignments/PA3/cool.output
Terminals unused in grammar

    ERROR


State 11 conflicts: 1 shift/reduce
State 18 conflicts: 1 shift/reduce
State 51 conflicts: 14 shift/reduce
State 87 conflicts: 1 shift/reduce
State 133 conflicts: 9 shift/reduce
State 145 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | CLASS error ';' class

    7 feature_list: %empty
    8             | attr
    9             | method
   10             | feature_list attr
   11             | feature_list method
   12             | feature_list error ';'

   13 attr: OBJECTID ':' TYPEID ASSIGN expression ';'
   14     | OBJECTID ':' TYPEID ';'

   15 method: OBJECTID '(' formal_list ')' ':' TYPEID '{' expression '}' ';'

   16 formal_list: %empty
   17            | formal
   18            | formal_list ',' formal

   19 formal: OBJECTID ':' TYPEID

   20 expression_list: %empty
   21                | expression ';'
   22                | expression_list expression ';'
   23                | expression_list error ';'

   24 expression_list2: %empty
   25                 | expression
   26                 | expression_list2 ',' expression

   27 expression: OBJECTID ASSIGN expression
   28           | expression '.' OBJECTID '(' expression_list2 ')'
   29           | expression '@' TYPEID '.' OBJECTID '(' expression_list2 ')'
   30           | OBJECTID '(' expression_list2 ')'
   31           | IF expression THEN expression ELSE expression FI
   32           | WHILE expression LOOP expression POOL
   33           | '{' expression_list '}'
   34           | LET let
   35           | CASE expression OF case_list ESAC
   36           | NEW TYPEID
   37           | ISVOID expression
   38           | expression '+' expression
   39           | expression '-' expression
   40           | expression '*' expression
   41           | expression '/' expression
   42           | '~' expression
   43           | expression '<' expression
   44           | expression LE expression
   45           | expression '=' expression
   46           | NOT expression
   47           | '(' expression ')'
   48           | OBJECTID
   49           | INT_CONST
   50           | STR_CONST
   51           | BOOL_CONST

   52 let: OBJECTID ':' TYPEID IN expression
   53    | OBJECTID ':' TYPEID ASSIGN expression IN expression
   54    | OBJECTID ':' TYPEID ',' let
   55    | OBJECTID ':' TYPEID ASSIGN expression ',' let
   56    | error ',' let

   57 case: OBJECTID ':' TYPEID DARROW expression ';'

   58 case_list: %empty
   59          | case
   60          | case_list case


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 15 28 29 30 47
    ')' (41) 15 28 29 30 47
    '*' (42) 40
    '+' (43) 38
    ',' (44) 18 26 54 55 56
    '-' (45) 39
    '.' (46) 28 29
    '/' (47) 41
    ':' (58) 13 14 15 19 52 53 54 55 57
    ';' (59) 4 5 6 12 13 14 15 21 22 23 57
    '<' (60) 43
    '=' (61) 45
    '@' (64) 29
    '{' (123) 4 5 15 33
    '}' (125) 4 5 15 33
    '~' (126) 42
    error (256) 6 12 23 56
    CLASS (258) 4 5 6
    ELSE (259) 31
    FI (260) 31
    IF (261) 31
    IN (262) 52 53
    INHERITS (263) 5
    LET (264) 34
    LOOP (265) 32
    POOL (266) 32
    THEN (267) 31
    WHILE (268) 32
    CASE (269) 35
    ESAC (270) 35
    OF (271) 35
    DARROW (272) 57
    NEW (273) 36
    ISVOID (274) 37
    STR_CONST <symbol> (275) 50
    INT_CONST <symbol> (276) 49
    BOOL_CONST <boolean> (277) 51
    TYPEID <symbol> (278) 4 5 13 14 15 19 29 36 52 53 54 55 57
    OBJECTID <symbol> (279) 13 14 15 19 27 28 29 30 48 52 53 54 55 57
    ASSIGN (280) 13 27 53 55
    NOT (281) 46
    LE (282) 44
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3
        on right: 1 3
    class <class_> (48)
        on left: 4 5 6
        on right: 2 3 6
    feature_list <features> (49)
        on left: 7 8 9 10 11 12
        on right: 4 5 10 11 12
    attr <feature> (50)
        on left: 13 14
        on right: 8 10
    method <feature> (51)
        on left: 15
        on right: 9 11
    formal_list <formals> (52)
        on left: 16 17 18
        on right: 15 18
    formal <formal> (53)
        on left: 19
        on right: 17 18
    expression_list <expressions> (54)
        on left: 20 21 22 23
        on right: 22 23 33
    expression_list2 <expressions> (55)
        on left: 24 25 26
        on right: 26 28 29 30
    expression <expression> (56)
        on left: 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51
        on right: 13 15 21 22 25 26 27 28 29 31 32 35 37 38 39 40 41 42 43 44 45 46 47 52 53 55 57
    let <expression> (57)
        on left: 52 53 54 55 56
        on right: 34 54 55 56
    case <case_> (58)
        on left: 57
        on right: 59 60
    case_list <cases> (59)
        on left: 58 59 60
        on right: 35 60


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


State 1

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | CLASS . error ';' class

    error   shift, and go to state 5
    TYPEID  shift, and go to state 6


State 2

    0 $accept: program . $end

    $end  shift, and go to state 7


State 3

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 8


State 4

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 5

    6 class: CLASS error . ';' class

    ';'  shift, and go to state 9


State 6

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 7

    0 $accept: program $end .

    $default  accept


State 8

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 9

    6 class: CLASS error ';' . class

    CLASS  shift, and go to state 1

    class  go to state 12


State 10

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 13


State 11

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    OBJECTID  shift, and go to state 14

    OBJECTID  [reduce using rule 7 (feature_list)]
    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 15
    attr          go to state 16
    method        go to state 17


State 12

    6 class: CLASS error ';' class .

    $default  reduce using rule 6 (class)


State 13

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 18


State 14

   13 attr: OBJECTID . ':' TYPEID ASSIGN expression ';'
   14     | OBJECTID . ':' TYPEID ';'
   15 method: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 19
    '('  shift, and go to state 20


State 15

    4 class: CLASS TYPEID '{' feature_list . '}' ';'
   10 feature_list: feature_list . attr
   11             | feature_list . method
   12             | feature_list . error ';'

    error     shift, and go to state 21
    OBJECTID  shift, and go to state 14
    '}'       shift, and go to state 22

    attr    go to state 23
    method  go to state 24


State 16

    8 feature_list: attr .

    $default  reduce using rule 8 (feature_list)


State 17

    9 feature_list: method .

    $default  reduce using rule 9 (feature_list)


State 18

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    OBJECTID  shift, and go to state 14

    OBJECTID  [reduce using rule 7 (feature_list)]
    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 25
    attr          go to state 16
    method        go to state 17


State 19

   13 attr: OBJECTID ':' . TYPEID ASSIGN expression ';'
   14     | OBJECTID ':' . TYPEID ';'

    TYPEID  shift, and go to state 26


State 20

   15 method: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expression '}' ';'

    OBJECTID  shift, and go to state 27

    $default  reduce using rule 16 (formal_list)

    formal_list  go to state 28
    formal       go to state 29


State 21

   12 feature_list: feature_list error . ';'

    ';'  shift, and go to state 30


State 22

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 31


State 23

   10 feature_list: feature_list attr .

    $default  reduce using rule 10 (feature_list)


State 24

   11 feature_list: feature_list method .

    $default  reduce using rule 11 (feature_list)


State 25

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
   10 feature_list: feature_list . attr
   11             | feature_list . method
   12             | feature_list . error ';'

    error     shift, and go to state 21
    OBJECTID  shift, and go to state 14
    '}'       shift, and go to state 32

    attr    go to state 23
    method  go to state 24


State 26

   13 attr: OBJECTID ':' TYPEID . ASSIGN expression ';'
   14     | OBJECTID ':' TYPEID . ';'

    ASSIGN  shift, and go to state 33
    ';'     shift, and go to state 34


State 27

   19 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 35


State 28

   15 method: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expression '}' ';'
   18 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 36
    ','  shift, and go to state 37


State 29

   17 formal_list: formal .

    $default  reduce using rule 17 (formal_list)


State 30

   12 feature_list: feature_list error ';' .

    $default  reduce using rule 12 (feature_list)


State 31

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 32

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 38


State 33

   13 attr: OBJECTID ':' TYPEID ASSIGN . expression ';'

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expression  go to state 53


State 34

   14 attr: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 14 (attr)


State 35

   19 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 54


State 36

   15 method: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 55


State 37

   18 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 27

    formal  go to state 56


State 38

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 39

   31 expression: IF . expression THEN expression ELSE expression FI

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expression  go to state 57


State 40

   34 expression: LET . let

    error     shift, and go to state 58
    OBJECTID  shift, and go to state 59

    let  go to state 60


State 41

   32 expression: WHILE . expression LOOP expression POOL

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expression  go to state 61


State 42

   35 expression: CASE . expression OF case_list ESAC

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expression  go to state 62


State 43

   36 expression: NEW . TYPEID

    TYPEID  shift, and go to state 63


State 44

   37 expression: ISVOID . expression

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expression  go to state 64


State 45

   50 expression: STR_CONST .

    $default  reduce using rule 50 (expression)


State 46

   49 expression: INT_CONST .

    $default  reduce using rule 49 (expression)


State 47

   51 expression: BOOL_CONST .

    $default  reduce using rule 51 (expression)


State 48

   27 expression: OBJECTID . ASSIGN expression
   30           | OBJECTID . '(' expression_list2 ')'
   48           | OBJECTID .

    ASSIGN  shift, and go to state 65
    '('     shift, and go to state 66

    $default  reduce using rule 48 (expression)


State 49

   46 expression: NOT . expression

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expression  go to state 67


State 50

   42 expression: '~' . expression

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expression  go to state 68


State 51

   33 expression: '{' . expression_list '}'

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    IF          [reduce using rule 20 (expression_list)]
    LET         [reduce using rule 20 (expression_list)]
    WHILE       [reduce using rule 20 (expression_list)]
    CASE        [reduce using rule 20 (expression_list)]
    NEW         [reduce using rule 20 (expression_list)]
    ISVOID      [reduce using rule 20 (expression_list)]
    STR_CONST   [reduce using rule 20 (expression_list)]
    INT_CONST   [reduce using rule 20 (expression_list)]
    BOOL_CONST  [reduce using rule 20 (expression_list)]
    OBJECTID    [reduce using rule 20 (expression_list)]
    NOT         [reduce using rule 20 (expression_list)]
    '~'         [reduce using rule 20 (expression_list)]
    '{'         [reduce using rule 20 (expression_list)]
    '('         [reduce using rule 20 (expression_list)]
    $default    reduce using rule 20 (expression_list)

    expression_list  go to state 69
    expression       go to state 70


State 52

   47 expression: '(' . expression ')'

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expression  go to state 71


State 53

   13 attr: OBJECTID ':' TYPEID ASSIGN expression . ';'
   28 expression: expression . '.' OBJECTID '(' expression_list2 ')'
   29           | expression . '@' TYPEID '.' OBJECTID '(' expression_list2 ')'
   38           | expression . '+' expression
   39           | expression . '-' expression
   40           | expression . '*' expression
   41           | expression . '/' expression
   43           | expression . '<' expression
   44           | expression . LE expression
   45           | expression . '=' expression

    LE   shift, and go to state 72
    '<'  shift, and go to state 73
    '='  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '@'  shift, and go to state 79
    '.'  shift, and go to state 80
    ';'  shift, and go to state 81


State 54

   19 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 19 (formal)


State 55

   15 method: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expression '}' ';'

    TYPEID  shift, and go to state 82


State 56

   18 formal_list: formal_list ',' formal .

    $default  reduce using rule 18 (formal_list)


State 57

   28 expression: expression . '.' OBJECTID '(' expression_list2 ')'
   29           | expression . '@' TYPEID '.' OBJECTID '(' expression_list2 ')'
   31           | IF expression . THEN expression ELSE expression FI
   38           | expression . '+' expression
   39           | expression . '-' expression
   40           | expression . '*' expression
   41           | expression . '/' expression
   43           | expression . '<' expression
   44           | expression . LE expression
   45           | expression . '=' expression

    THEN  shift, and go to state 83
    LE    shift, and go to state 72
    '<'   shift, and go to state 73
    '='   shift, and go to state 74
    '+'   shift, and go to state 75
    '-'   shift, and go to state 76
    '*'   shift, and go to state 77
    '/'   shift, and go to state 78
    '@'   shift, and go to state 79
    '.'   shift, and go to state 80


State 58

   56 let: error . ',' let

    ','  shift, and go to state 84


State 59

   52 let: OBJECTID . ':' TYPEID IN expression
   53    | OBJECTID . ':' TYPEID ASSIGN expression IN expression
   54    | OBJECTID . ':' TYPEID ',' let
   55    | OBJECTID . ':' TYPEID ASSIGN expression ',' let

    ':'  shift, and go to state 85


State 60

   34 expression: LET let .

    $default  reduce using rule 34 (expression)


State 61

   28 expression: expression . '.' OBJECTID '(' expression_list2 ')'
   29           | expression . '@' TYPEID '.' OBJECTID '(' expression_list2 ')'
   32           | WHILE expression . LOOP expression POOL
   38           | expression . '+' expression
   39           | expression . '-' expression
   40           | expression . '*' expression
   41           | expression . '/' expression
   43           | expression . '<' expression
   44           | expression . LE expression
   45           | expression . '=' expression

    LOOP  shift, and go to state 86
    LE    shift, and go to state 72
    '<'   shift, and go to state 73
    '='   shift, and go to state 74
    '+'   shift, and go to state 75
    '-'   shift, and go to state 76
    '*'   shift, and go to state 77
    '/'   shift, and go to state 78
    '@'   shift, and go to state 79
    '.'   shift, and go to state 80


State 62

   28 expression: expression . '.' OBJECTID '(' expression_list2 ')'
   29           | expression . '@' TYPEID '.' OBJECTID '(' expression_list2 ')'
   35           | CASE expression . OF case_list ESAC
   38           | expression . '+' expression
   39           | expression . '-' expression
   40           | expression . '*' expression
   41           | expression . '/' expression
   43           | expression . '<' expression
   44           | expression . LE expression
   45           | expression . '=' expression

    OF   shift, and go to state 87
    LE   shift, and go to state 72
    '<'  shift, and go to state 73
    '='  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '@'  shift, and go to state 79
    '.'  shift, and go to state 80


State 63

   36 expression: NEW TYPEID .

    $default  reduce using rule 36 (expression)


State 64

   28 expression: expression . '.' OBJECTID '(' expression_list2 ')'
   29           | expression . '@' TYPEID '.' OBJECTID '(' expression_list2 ')'
   37           | ISVOID expression .
   38           | expression . '+' expression
   39           | expression . '-' expression
   40           | expression . '*' expression
   41           | expression . '/' expression
   43           | expression . '<' expression
   44           | expression . LE expression
   45           | expression . '=' expression

    '@'  shift, and go to state 79
    '.'  shift, and go to state 80

    $default  reduce using rule 37 (expression)


State 65

   27 expression: OBJECTID ASSIGN . expression

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expression  go to state 88


State 66

   30 expression: OBJECTID '(' . expression_list2 ')'

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    $default  reduce using rule 24 (expression_list2)

    expression_list2  go to state 89
    expression        go to state 90


State 67
